# logqbit

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  publish.yml
docs/: api.md  cli.md  core_usage.md  development.md  index.md  install.md  migration_guide.md
notebooks/: bench_flush.ipynb  bench_flush.py  bench_logfolder.ipynb  flush_issue_investigation.py  live_plotter_quickstart.py  logfolder_quickstart.ipynb  move_from_labrad.py  pcolormesh_plot2d.py  try_finalizer.py  try_theme.py
src/logqbit/: __init__.py  browser.py  cli.py  client.py  constants.py  dataframe.py  detail_view.py  index.py  live_plotter.py  logfolder.py  metadata.py  plotter.py  registry.py
src/logqbit/gui/: __init__.py  browser.py  live_plotter.py  plotter.py
tests/: conftest.py  for_all_pythons.ps1  test_browser.py  test_dataframe.py  test_flush_issue.py  test_index.py  test_live_plotter.py  test_logfolder.py  test_metadata.py  test_plotter.py  test_registry.py
tests/data/: test.yaml
