[project]
name = "logqbit"
version = "0.0.1"
description = "Lightweight data logger and live plotter for lab-scale experiments."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dpath>=2.2.0",
    "json-tricks>=3.17.3",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pylabrad>=0.98.3",
    "pyqtgraph>=0.13.7",
    "pyside6>=6.9.3",
    "ruamel-yaml>=0.18.15",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/Qiujv/logqbit"

[project.gui-scripts]
logqbit-live-plotter = "logqbit.live_plotter:main"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "pytest>=8.4.2",
]
