[project]
name = "logqbit"
dynamic = ["version"]
description = "Simple data logger and live plotter for lab-scale experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numba>=0.65.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pyqtgraph>=0.14.0",
    "pyside6>=6.9.3",
    "ruamel-yaml>=0.18.15",
    "send2trash>=1.8.3",
    "tqdm>=4.67.1",
    "typing-extensions>=4.15.0",
]

[project.urls]
Homepage = "https://github.com/Qiujv/logqbit"

[project.scripts]
logqbit = "logqbit.cli:main"

[project.gui-scripts]
logqbit-live-plotter = "logqbit.live_plotter:main"
logqbit-browser = "logqbit.browser:main"

[project.optional-dependencies]
labrad = [
    "pylabrad>=0.98.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/logqbit"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "README.md", "LICENSE", "pyproject.toml"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
